# SqueezeLM

./: .gitignore  README.md  pyproject.toml
squeeze_lm/: config.py  logger.py
squeeze_lm/client/: batch_inference.py  inference.py
squeeze_lm/server/: Dockerfile.vllm  requirements.txt
