[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squeeze_lm"
version = "0.2.0"
description = "A lighter, practical inference toolkit to exploit the computational ability of OpenAI-Compatible API servers"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "aiohttp",
    "aiofiles",
    "tqdm",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["squeeze*"]
