[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squeeze_lm"
version = "1.2.3"
description = "A lighter, practical inference toolkit to exploit the computational ability of OpenAI-Compatible API servers"
authors = [
    { name = "Westwoods39", email = "Westwoods39@github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "aiohttp",
    "aiofiles",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["squeeze*"]
